--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
   },
   "homepage": "https://github.com/1905-javareact/project0-express-api-TianzengLiu#readme",
   "dependencies": {
+    "@types/pg": "^7.4.14",
     "body-parser": "^1.19.0",
     "express": "^4.16.4",
-    "express-session": "^1.16.1"
+    "express-session": "^1.16.1",
+    "pg": "^7.11.0"
   },
   "devDependencies": {
     "@types/express": "^4.16.1",
