--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/1905-javareact/project0-express-api-TianzengLiu#readme",
   "dependencies": {
     "@types/pg": "^7.4.14",
+    "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
     "express": "^4.16.4",
     "express-session": "^1.16.1",
